# panamax

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev-reduced-crates  LICENSE-MIT  README.md  flake.nix  nginx.sample.conf
.cargo/: config
.github/workflows/: container-test.yml  main.yml
src/: ARCHITECTURE.md  crates.rs  crates_index.rs  download.rs  lib.rs  main.rs  mirror.default.toml  mirror.rs  progress_bar.rs  rustup.rs  serve.rs  verify.rs
static/: panamax.css  rustup.css
static/css/: normalize.css  panamax.css
static/js/: panamax.js
templates/: index.html
