[package]
name = "panamax"
version = "0.3.0"
authors = ["k3d3 <k@3d3.ca>"]
description = "Mirror rustup and crates.io repositories, for offline Rust and Cargo usage."
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/k3d3/panamax"
repository = "https://github.com/k3d3/panamax"
edition = "2018"

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
indicatif = "0.16.0"
structopt = "0.3.21"
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"] }
console = "0.14.1"
scoped_threadpool = "0.1.9"
log = "0.4.14"
env_logger = "0.8.3"
sha2 = "0.9.4"
url = "2.2.2"
glob = "0.3.0"
git2 = "0.13.18"
serde_json = "1.0.64"
thiserror = "1.0.24"

[features]
default = []

# For development purposes, reduce the crate download count
# and only download crates that start with z
dev_reduced_crates = []