[package]
name = "panamax"
version = "1.0.9"
authors = ["k3d3 <k@3d3.ca>"]
description = "Mirror rustup and crates.io repositories, for offline Rust and Cargo usage."
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/panamax-rs/panamax"
repository = "https://github.com/panamax-rs/panamax"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }
indicatif = "0.17"
clap = { version = "4.1", features = ["derive"] }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
console = "0.15"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
url = "2.2"
glob = "0.3"
git2 = "0.16"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.25", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
askama = "0.11"
askama_warp = "0.12"
include_dir = "0.7"
bytes = "1.1"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
futures = "0.3"
walkdir = "2.3"

[features]
default = []
dev_reduced_crates = []
vendored-openssl = ["reqwest/native-tls-vendored"]
